Change user update route to accept dynamic field changes and update swagger
