# backend/api/swagger.yaml
@@ -98,8 +98,8 @@ definitions:
         type: string
       id:
         type: string
-      medicine_id:
-        type: string
+      medicine:
+        $ref: '#/definitions/entity.Medicine'
       observation:
         type: string
       priority:
@@ -110,8 +110,8 @@ definitions:
         type: string
       updated_at:
         type: string
-      user_id:
-        type: string
+      user:
+        $ref: '#/definitions/entity.User'
     type: object
   dto.FindPyxisOutputDTO:
     properties:
@@ -236,6 +236,21 @@ definitions:
       updated_at:
         type: string
     type: object
+  entity.Medicine:
+    properties:
+      batch:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      stripe:
+        $ref: '#/definitions/entity.StripeType'
+      updated_at:
+        type: string
+    type: object
   entity.StripeType:
     enum:
     - red
@@ -246,7 +261,26 @@ definitions:
     - StripeRed
     - StripeYellow
     - StripeBlack
-host: localhost
+  entity.User:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      on_duty:
+        type: boolean
+      password:
+        type: string
+      role:
+        type: string
+      updated_at:
+        type: string
+    type: object
+host: localhost:8080
 info:
   contact:
     email: gomedicine@inteli.edu.br
